--- a/_posts/2016-07-31-plits.markdown
+++ b/_posts/2016-07-31-plits.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Programming Language in the Sky"
+title:  "Programming Language in the Sky (PLITS)"
 date:   2016-07-31 09:00:00 -0000
 categories: pl
 group: pl
