--- a/_posts/2017-04-29-one-year.markdown
+++ b/_posts/2017-04-29-one-year.markdown
@@ -96,6 +96,8 @@ enough.
 [More on this, my job completely changed 4 days after I started and I
 went from researcher to software engineer.]
 
+## The First Year
+
 My first year at the university was decent.  Let's look at what hapened
 during this year.
 
